Start working on chapter03

--- a/Dyplom/dokumentacja.bib
+++ b/Dyplom/dokumentacja.bib
@@ -181,6 +181,34 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2024}
 }
 
+@ARTICLE{DB_FIRST_VS_CODE_FIRST_1,
+	author = {Tymoteusz Kęstowicz},
+    title = {{EF w podejściu Database First vs Code First – co wybrać?}},
+    note = {\url{https://tymoteuszkestowicz.com/2014/03/ef-w-podejsciu-database-first-vs-code-first-co-wybrac/} [dostęp dnia 20 listopada 2024]},
+    year = {2014}
+}
+
+@ARTICLE{DB_FIRST_VS_CODE_FIRST_2,
+	author = {Younes Belouche},
+    title = {{Code First Approach vs. Database First Approach}},
+    note = {\url{https://medium.com/codex/code-first-approach-vs-database-first-approach-a3830c0cc9b6} [dostęp dnia 20 listopada 2024]},
+    year = {2023}
+}
+
+@ARTICLE{CODE_FIRST,
+	author = {Saurabh Gour},
+    title = {{Code First Approach vs. Database First Approach}},
+    note = {\url{https://medium.com/swlh/code-first-database-design-and-development-using-jpa-hibernate-flway-fastnate-and-spring-boot-3ede35b403a6} [dostęp dnia 20 listopada 2024]},
+    year = {2020}
+}
+
+@misc{DB_FIRST,
+    author = {Microsoft},
+    title = {{Najpierw baza danych}},
+    note = {\url{https://learn.microsoft.com/pl-pl/ef/ef6/modeling/designer/workflows/database-first} [dostęp dnia 20 listopada 2024]},
+    year = {2023}
+}
+
 @booklet{Marcin,
 title = {{BPMN Notacja modelowania procesów biznesowych}},
 author = {Moś, M.},
