--- a/Dyplom/rozdzial01.tex
+++ b/Dyplom/rozdzial01.tex
@@ -14,7 +14,7 @@ Obecnie na rynku spotkać można wiele systemów typu eBOK. Jednym z nich jest s
 \end{figure}
 
 Innym przykładem jest aplikacja ,,Play24'' (choć może lepiej powiedzieć ,,system informatyczny'', względem którego wymieniona aplikacja pełni rolę punktu dostępowego z przyjaznym interfejsem użytkownika), dostarczana przez operatora telekomunikacji Play. Umożliwia ona użytkownikom zarządzanie wykupionymi usługami telekomunikacyjnymi oraz multimediami. Lista funkcji oferowanych przez tę aplikację jest szeroka. Obejmuje, m.in, monitorowanie wykorzystania pakietów internetowych, minut rozmów czy SMS-ów, co pozwala użytkownikom na bieżąco śledzić stan konta i w razie potrzeby dokupować dodatkowe usługi. Użytkownicy mogą również sprawdzać historię swoich aktywności, w tym szczegółowe informacje na temat wysyłanych wiadomości, połączeń czy zakupionych pakietów ~\cite{Play24}.
-Na rysunku \ref{fig:play24_manual} % TO DO: prosiłem, by nie pisać "rysunek ilustruje" !!!)
+Na rysunku \ref{fig:play24_manual} 
 pokazano przykładowe widoki interfejsu użytkownika, eksponującego funkcje, dzięki którym użytkownicy mogą śledzić swoje zużycie internetu, zarządzać opłatami oraz kontrolować ustawienia sieci domowej.
 \begin{figure}[ht]
     \centering
