--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -17,4 +17,8 @@
   \item [SQL] (ang.\ \emph{Structured Query Language})
   \item [PostgreSQL] (ang.\ \emph{Postgre Structured Query Language})
   \item [XSS] (ang.\ \emph{Cross-Site Scripting})
+  \item [ORM] (ang.\ \emph{Object-Relational Mapping})
+  \item [JPA] (ang.\ \emph{Java Persistence API})
+  \item [UI] (ang.\ \emph{User Interface})
+  \item [SEO] (ang.\ \emph{Search Engine Optimization})
 \end{description}
